# application-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
application-generator/: generator.py  keyword-extractor.py
