[tool.poetry]
name = "application-generator"
version = "0.1.0"
description = ""
authors = ["Dhruvsujatha <luberrdhruv@gmail.com>"]
readme = "README.md"
packages = [{include = "application-generator"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
jinja2 = "^3.1.2"
keybert = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false